--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a href="https://screen-share.github.io/capture-all-screens/">spec</a>
           </li>
           <li>
-            Screen-Capture Mouse Events: <a href="https://github.com/screen-share/mouse-events">repo</a>,
-            <a href="https://screen-share.github.io/mouse-events/">spec</a>
+            Captured Mouse Events: <a href="https://github.com/screen-share/captured-mouse-events">repo</a>,
+            <a href="https://screen-share.github.io/captured-mouse-events/">spec</a>
           </li>
         </ul>
       </li>
