Sort alphabetically and add Captured Surface Control

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
         <a href="https://github.com/orgs/screen-share/repositories">Repositories</a>
         <ul>
           <li>
+            Captured Surface Control: <a href="https://github.com/screen-share/captured-surface-control">repo</a>,
+            <a href="https://screen-share.github.io/captured-surface-control/">spec</a>
+          </li>
+          <li>
+            Captured Mouse Events: <a href="https://github.com/screen-share/captured-mouse-events">repo</a>,
+            <a href="https://screen-share.github.io/captured-mouse-events/">spec</a>
+          </li>
+          <li>
             Element Capture: <a href="https://www.github.com/screen-share/element-capture/">repo</a>,
             <a href="https://screen-share.github.io/element-capture/">spec</a>
           </li>
           <li>
             getAllScreensMedia: <a href="https://github.com/screen-share/capture-all-screens/">repo</a>,
             <a href="https://screen-share.github.io/capture-all-screens/">spec</a>
-          </li>
-          <li>
-            Captured Mouse Events: <a href="https://github.com/screen-share/captured-mouse-events">repo</a>,
-            <a href="https://screen-share.github.io/captured-mouse-events/">spec</a>
           </li>
         </ul>
       </li>
