--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Screen Capture Community Group</h1>
     <ul>
       <li><a href="https://www.w3.org/community/sccg/">Community page</a></li>
+      <li><a href="https://github.com/screen-share/discuss/issues">General discussion</a></li>
       <li><a href="https://github.com/screen-share/meetings">Meeting records</a></li>
       <li>
         <a href="https://github.com/orgs/screen-share/repositories">Repositories</a>
