--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             getAllScreensMedia: <a href="https://github.com/screen-share/capture-all-screens/">repo</a>,
             <a href="https://screen-share.github.io/capture-all-screens/">spec</a>
           </li>
+          <li>
+            isScreenCaptured signal: <a href="https://github.com/screen-share/is-screen-captured/">repo</a>,
+            <a href="https://github.com/screen-share/is-screen-captured/blob/main/README.md">explainer</a>,
+            (spec TBD)
+          </li>
         </ul>
       </li>
     </ul>
